added max length

--- a/Components/othersStudents.html
+++ b/Components/othersStudents.html
@@ -89,7 +89,7 @@
 
     <div>
         <label class="form_label">Purpose<sup>*</sup> :</label>
-        <textarea name="purpose" style="vertical-align: top;" name="message" rows="3" cols="25" placeholder="Max 100 words"></textarea>
+        <textarea name="purpose" style="vertical-align: top;" name="message" rows="3" cols="25" maxlength="100" placeholder="Max 100 words"></textarea>
         </div>
         <div class="button-group">
             <button type="submit" value="submit" class="btn_similar">Proceed for Payment</button>
