--- a/Components/style.css
+++ b/Components/style.css
@@ -26,7 +26,7 @@
   } */
 
   .dropdown-menu.show {
-    transform: translate3d(54px, 41px, 0px) !important
+    /* transform: translate3d(54px, 41px, 0px) !important */
 }
 .inpField
 {
@@ -37,8 +37,27 @@
 sup {
     top: -.5em;
     color: red;
+    font-weight: bold;
+    font-size: 12px;
 }
 select {
     text-transform: none;
-    width: 155px;
+    width: 159px;
+    height: 32px;
+}
+textarea{
+    width: 100%;
+    height: 99px;
+    margin-top: 10px;
+}
+.btn_submit
+{
+    background-color:  #e75480;
+    color: #fff;
+}
+img {
+    vertical-align: middle;
+    height: 102px;
+    width: 180px;
+    margin-top: 20px;
 }
