--- a/Components/existingStudents.html
+++ b/Components/existingStudents.html
@@ -18,7 +18,7 @@
     <div class="col-sm-10 col-lg-12">
       <img src="../assets/axis.jpg" alt="axis image"/>
   </div>
-  <h2 style="margin-left: 10%;">VNS College</h2>
+  <h4 style="margin-left: 6%;">VNS GROUP OF COLLEGES</h4>
   <form class="form-horizontal" onsubmit="return validateForm()">
     <div class="form-group">
       <label class="control-label col-sm-2" for="scolar">Scholar Number<sup>*</sup>:</label>
@@ -29,7 +29,7 @@
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-8 col-lg-6">
         <button type="submit" class="btn btn_submit">Validate</button>
-        <button type="submit" class="btn btn-secondary">Cancel</button>
+        <button type="button" class="btn btn-secondary"><a href="../index.html" style="color: black;">Cancel</a></button>
       </div>
     </div>
     <div class="form-group">
