--- a/Components/othersStudents.html
+++ b/Components/othersStudents.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-sm-2" for="course">Select<sup>*</sup>:</label>
+        <label class="control-label col-sm-2" for="course">Select Course<sup>*</sup>:</label>
         <div class="col-sm-10 col-lg-10 col-lg-6">
             <select id="selectCourse" name="dropdown">
                 <option value="">--Select Course--</option>
